# WA2_PS3_KIT

./: README-EN.md  wa2_archive.py  wa2_eboot.py  wa2_font.py  wa2_image.py  wa2_savedata.py  wa2_sce.py  wa2_text.py
utils/: wa2_elzma.py
wa2_archive_rust/: Cargo.toml
wa2_archive_rust/src/: main.rs
