[package]
name = "wa2_archive_rust"
version = "0.1.0"
edition = "2021"
default-run = "wa2_archive_rust"

[dependencies]
lzma-sdk-rs = { version = "0.2301.0", features = ["decode"] }
image = { version = "0.25.10", default-features = false, features = ["png", "tga"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
hex = "0.4"
rayon = "1.8"
base64 = "0.22.1"
gtfdds-rs = { version = "0.2.1", path = "../gtfdds-rs-port" }
